Fix repository list overflow

--- a/src/app/(private)/dashboard/styles.scss
+++ b/src/app/(private)/dashboard/styles.scss
@@ -25,9 +25,12 @@
     margin-bottom: 2rem;
 
     .bookmarks {
+      overflow-x: auto;
       display: flex;
       gap: 1rem;
-      min-height: 150px;
+      height: 200px;
+      align-items: center;
+      padding: 2rem;
 
       .not_found_message {
         width: 100%;
