--- a/src/components/RepositoryCard/styles.scss
+++ b/src/components/RepositoryCard/styles.scss
@@ -12,6 +12,7 @@
 .repository_card {
   background: $color3;
   width: 200px;
+  min-width: 200px;
   height: 150px;
   border-radius: 0.5rem;
   position: relative;
@@ -56,7 +57,7 @@
 
   &:hover {
     transform: scale(1.1);
-    box-shadow: 0px 0px 15px 15px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 7px 7px rgba(0, 0, 0, 0.1);
 
     svg {
       display: initial;
